# falco-rustlings

./: Cargo.toml  OWNERS  README.md  info.toml
exercises/: async_events_plugin.rs  event_parsing.rs  event_parsing_tables.rs  event_parsing_using_tables.rs  plugin_config.rs  source_plugin.rs  source_plugin_01.rs  source_plugin_async_events.rs  source_plugin_extract.rs  source_plugin_with_events.rs  source_plugin_yielding_events.rs  syscall_extract_plugin.rs  your_first_plugin.rs
exercises/00_setup/: README.md  building_the_sdk_just_a_moment_please.rs
solutions/: async_events_plugin.rs  event_parsing.rs  event_parsing_tables.rs  field_extraction.rs  plugin_config.rs  source_plugin.rs  source_plugin_01.rs  source_plugin_async_events.rs  source_plugin_extract.rs  source_plugin_with_events.rs  source_plugin_yielding_events.rs  syscall_extract_plugin.rs  your_first_plugin.rs
src/: common.rs  lib.rs  native.rs  syscall_source_plugin.rs
