# Don't edit the `bin` list manually! It is updated by `rustlings dev update`
bin = [
  { name = "building_the_sdk_just_a_moment_please", path = "exercises/building_the_sdk_just_a_moment_please.rs" },
  { name = "your_first_plugin", path = "exercises/your_first_plugin.rs" },
  { name = "your_first_plugin_sol", path = "solutions/your_first_plugin.rs" },
  { name = "source_plugin_01", path = "exercises/source_plugin_01.rs" },
  { name = "source_plugin_01_sol", path = "solutions/source_plugin_01.rs" },
  { name = "source_plugin_yielding_events", path = "exercises/source_plugin_yielding_events.rs" },
  { name = "source_plugin_yielding_events_sol", path = "solutions/source_plugin_yielding_events.rs" },
  { name = "source_plugin_extract", path = "exercises/source_plugin_extract.rs" },
  { name = "source_plugin_extract_sol", path = "solutions/source_plugin_extract.rs" },
]

[package]
name = "exercises"
edition = "2021"
# Don't publish the exercises on crates.io!
publish = false

[dependencies]
falco_plugin = { git = "https://github.com/falcosecurity/plugin-sdk-rs" }
falco_plugin_runner = { git = "https://github.com/falcosecurity/plugin-sdk-rs" }
rand = "0.8.5"
