# Don't edit the `bin` list manually! It is updated by `rustlings dev update`
bin = [
  { name = "building_the_sdk_just_a_moment_please", path = "exercises/00_setup/building_the_sdk_just_a_moment_please.rs" },
  { name = "your_first_plugin", path = "exercises/your_first_plugin.rs" },
  { name = "your_first_plugin_sol", path = "solutions/your_first_plugin.rs" },
  { name = "source_plugin", path = "exercises/source_plugin.rs" },
  { name = "source_plugin_sol", path = "solutions/source_plugin.rs" },
  { name = "source_plugin_with_events", path = "exercises/source_plugin_with_events.rs" },
  { name = "source_plugin_with_events_sol", path = "solutions/source_plugin_with_events.rs" },
  { name = "source_plugin_async_events", path = "exercises/source_plugin_async_events.rs" },
  { name = "source_plugin_async_events_sol", path = "solutions/source_plugin_async_events.rs" },
  { name = "field_extraction", path = "exercises/field_extraction.rs" },
  { name = "field_extraction_sol", path = "solutions/field_extraction.rs" },
  { name = "plugin_configuration", path = "exercises/plugin_configuration.rs" },
  { name = "plugin_configuration_sol", path = "solutions/plugin_configuration.rs" },
  { name = "event_parsing", path = "exercises/event_parsing.rs" },
  { name = "event_parsing_sol", path = "solutions/event_parsing.rs" },
  { name = "event_parsing_using_tables", path = "exercises/event_parsing_using_tables.rs" },
  { name = "event_parsing_using_tables_sol", path = "solutions/event_parsing_using_tables.rs" },
  { name = "extract_fields_syscall_events", path = "exercises/extract_fields_syscall_events.rs" },
  { name = "extract_fields_syscall_events_sol", path = "solutions/extract_fields_syscall_events.rs" },
]

[package]
name = "exercises"
edition = "2021"
# Don't publish the exercises on crates.io!
publish = false

[dependencies]
falco_plugin = { git = "https://github.com/falcosecurity/plugin-sdk-rs" }
falco_plugin_runner = { git = "https://github.com/falcosecurity/plugin-sdk-rs" }
rand = "0.8.5"
